force-app/main/default/objects/Fund_Allocation__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>The amount of the Opportunity allocated to this Fund.</description>
    <inlineHelpText>Amount of the opportunity to allocate to this fund.</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>