force-app/main/default/objects/Fund_Allocation__c/fields/Fund__c.field-meta.xml
<CustomField>
    <fullName>Fund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Fund this Allocation is attributed to. Only Funds marked as active are available for new Allocations.</description>
    <inlineHelpText>The fund to attribute this allocation. Only funds marked as active are available for new allocations.</inlineHelpText>
    <label>Fund</label>
    <referenceTo>Fund__c</referenceTo>
    <relationshipLabel>Fund Allocations</relationshipLabel>
    <relationshipName>Fund_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>