force-app/main/default/objects/Fund_Allocation__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Opportunity you want this Allocation attributed to.</description>
    <inlineHelpText>Attributes allocations to an opportunity. All opportunities in a closed and won stage will be rolled up to this allocation&apos;s fund.</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Fund Allocations</relationshipLabel>
    <relationshipName>Fund_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>